--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Extract package version
         run: |
-          echo "PACKAGE_VERSION=$(GITHUB_REF/refs\/tags\//)" >> $GITHUB_ENV
+          echo "PACKAGE_VERSION=${GITHUB_REF_NAME}" >> $GITHUB_ENV
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -30,6 +30,9 @@ jobs:
           registry: nvcr.io
           username: $oauthtoken
           password: ${{ secrets.NGC_API_KEY }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Set up helm
         env:
